--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,8 @@ edition = "2021"
 [dependencies]
 uuid = {version = "1.2.2", features = [ "v4" ]}
 regex = "1.7"
+num-bigint = "0.4"
+num-traits = "0.2"
+itertools = "0.10"
+rand = "0.8"
+nalgebra-glm = "0.18"
